<resources>
    <string name="app_name">Starting Point</string>
    <string name="back">back</string>
    <string name="copyright">2022 All right reserved</string>
    <string name="close">Close</string>
    <string name="dashboard">dashboard</string>
    <string name="enter">enter</string>
    <string name="hello">Hello!</string>
    <string name="home_message">Welcome to the application</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
</resources>